gcc/testsuite/rust/compile/issue-4413.rs
#![feature(no_core)]
#![no_core]

fn main() {
    match money {
        v => println!  
    } // { dg-error "unexpected token .* - expecting delimiters" }
}